<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_blur">

    <TextView
        android:id="@+id/LostBagHeading"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/lost_bag_heading"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/LostBagCompanyName"
        android:layout_below="@id/LostBagHeading"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/company_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/LostBagColor"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_below="@id/LostBagCompanyName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/color"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/LostBagDate"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_below="@id/LostBagColor"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/item_lost_date"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:paddingLeft="10dp"
        android:clickable="true"
        android:focusable="false"
        />

    <EditText
        android:id="@+id/LostBagPlace"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="120dp"
        android:layout_below="@id/LostBagDate"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:hint="@string/item_lost_place"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="text"/>

    <EditText
        android:id="@+id/LostBagRoomNo"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_below="@id/LostBagPlace"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/room_no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/LostBagSpecialNotes"
        android:layout_width="277dp"
        android:layout_height="90dp"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_below="@id/LostBagRoomNo"
        android:layout_marginTop="20dp"
        android:hint="@string/special_notes_about_item"
        android:textColorHint="@android:color/white"
        android:paddingLeft="10dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/LostBagSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_below="@id/LostBagSpecialNotes"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="180dp"
        android:background="@drawable/login_button_background"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/LostBagBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_below="@id/LostBagSpecialNotes"
        android:layout_alignBaseline="@id/LostBagSubmitButton"
        android:layout_marginLeft="50dp"
        android:background="@drawable/grey_round_button"/>


</RelativeLayout>